# GeoForge

./: .gitignore  CLAUDE.md  DEVELOPMENT.md  PRD.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  SETUP.md  index.html  issues_backlog.md  package-lock.json  package.json  tectonic_algorithm_complete.md
.claude/: settings.local.json
.next/: BUILD_ID  app-path-routes-manifest.json  build-manifest.json  fallback-build-manifest.json  next-server.js.nft.json  prerender-manifest.json  required-server-files.js  required-server-files.json  routes-manifest.json  trace  trace-build
.next/cache/: .previewinfo  .rscinfo
.next/dev/: build-manifest.json  lock  prerender-manifest.json  trace
.next/diagnostics/: route-bundle-stats.json
.next/server/: app-paths-manifest.json  functions-config-manifest.json  middleware-build-manifest.js  server-reference-manifest.js  server-reference-manifest.json
.next/types/: routes.d.ts
app/: globals.css  layout.jsx  page.jsx
archive/tectonics/: CMakeLists.txt  build-wasm-direct.bat  build-wasm.bat  build-wasm.sh
archive/tectonics/public/: sim-wrapper.js  sim.js  sim.wasm
archive/tectonics/src/: index.js
archive/tectonics/src/cpp/include/: GeoTypes.hpp  TectonicSimulation.hpp
archive/tectonics/src/cpp/src/: Bindings.cpp  GeoTypes.cpp  TectonicSimulation.cpp
docs/: tectonic_simulation_plan.md
plan/: DAY0_TUESDAY_FINAL_BREAKDOWN.md  GEOFORGE_REVISED_FINAL.md
public/: index.html
public/gpml/: gplates-input-2026-04-03T00-40-56-974Z.gpml  gplates-input-2026-04-03T00-47-06-864Z.gpml  gplates-input-2026-04-03T00-51-58-055Z.gpml  gplates-input-2026-04-03T00-56-00-941Z.gpml  gplates-input-2026-04-03T00-57-06-874Z.gpml  gplates-input-2026-04-03T01-05-22-046Z.gpml  gplates-input-2026-04-03T01-07-42-536Z.gpml  (+35 more)
src/: index.js
src/web/: api.js  (+4 more)
(+327 files in other folders)
